tests/fixtures/invalid/enum_comma_constant_expression.c
enum Bad {
    VALUE = (1, 2)
};

int main(void) {
    return VALUE;
}
